fix tooltip on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@media (min-width: 480px) {
+@media (min-width: 360px) {
   img[alt="help icon"]:hover + #tooltip {
     display: block;
   }
